# ColonialSpace

./: CMakeLists.txt  README.md  commit.sh  execute.sh  main.cpp
data/game-states/: minimal.json  nominal.json
data/universe-templates/: standard.json
inc/: colony.hpp  common.hpp  faction.hpp  fleet.hpp  log.hpp  planet.hpp  ship.hpp  system.hpp  universe.hpp
src/: colony.cpp  common.cpp  faction.cpp  fleet.cpp  log.cpp  planet.cpp  ship.cpp  system.cpp  universe.cpp
